--- a/blog.html
+++ b/blog.html
@@ -18,10 +18,41 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_v2.9.2.1_.282015-09-13_21:00_Sun.29'>Release: v2.9.2.1 (2015-09-13 21:00 Sun)</span>
+    </h2>
+    <p>
+      v2.9.2 is another light release. It has a few minor parser changes.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Updated_images_for_English_and_Chinese_wikis'>Updated images for English and Chinese wikis</span>
+    </h3>
+    <p>
+      These updates were uploaded to <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_enwiki_latest</a> and <a href="https://archive.org/details/Xowa_zhwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_zhwiki_latest</a> . I'm still uploading English now, but it should be there in the morning.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Minor_parser_changes'>Minor parser changes</span>
+    </h3>
+    <p>
+      I made a few minor parser changes to handle articles in Romanian, Turkish and Finnish wikis.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Next_release:_v2.9.3'>Next release: v2.9.3</span>
+    </h3>
+    <p>
+      For images, I'm going to work on Indonesian, Romainian and Portuguese.
+    </p>
+    <p>
+      For development, I'm still working on the Math parser and some infrastructure items.
+    </p>
+    <p>
+      <br>
+    </p>
+
+    <h2>
       <span class='mw-headline' id='Release:_v2.9.1.1_.282015-09-06_20:00_Sun.29'>Release: v2.9.1.1 (2015-09-06 20:00 Sun)</span>
     </h2>
     <p>
-      v2.9.1 is a light release. It adss a new Graph extension.
+      v2.9.1 is a light release. It adds a new Graph extension.
     </p>
     <h3>
       <span class='mw-headline' id='Added_Graph_extension._Help:Diagnostics.2FJavascript.2FGraph'>Added Graph extension. [[Help:Diagnostics/Javascript/Graph]]</span>
