--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
 </td>
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
+  <b>2015-09-14</b> English and Chinese wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_zhwiki_latest" class="external text" rel="nofollow">Chinese wikis</a>
+    </li>
+  </ul>
+
   <b>2015-09-07</b> German and Turkish wikis released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German wikis</a>
