--- a/image_dbs.html
+++ b/image_dbs.html
@@ -267,7 +267,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -287,14 +287,45 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .xowa<br/>.sqlite3
+            .xowa<br>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-08-05_file_v2b.7z" class="external text" rel="nofollow">images.update.2015-08-05.v2b (.xowa)</a><br>
              <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-08-05_file_v2a.7z" class="external text" rel="nofollow">images.update.2015-08-05.v2a (.xowa)</a><br>
-<!--             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-08-05_file_v1.7z" class="external text" rel="nofollow">images.update.2015-08-05.v1 (.sqlite3)</a><br> -->
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-01
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-14
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            4.4
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-09-01_file_v2b.7z" class="external text" rel="nofollow">images.update.2015-09-01.v2b (.xowa)</a><br>
           </p>
         </td>
       </tr>
@@ -827,29 +858,36 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://zh.wikipedia.org/wiki/">https://zh.wikipedia.org</a><br>
+            <a href="https://zh.wikipedia.org/wiki/">https://zh.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-08-23
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-14
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            10
+            12.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_zhwiki_latest/Xowa_zhwiki_2014-08-23.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_zhwiki_latest/Xowa_zhwiki_2015-09-01_text.7z" class="external text" rel="nofollow">wiki</a><br>
+             <a href="https://archive.org/download/Xowa_zhwiki_latest/Xowa_zhwiki_2015-09-01_file_core.7z" class="external text" rel="nofollow">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_zhwiki_latest/Xowa_zhwiki_2015-09-01_file_ns-000_part-1.7z" class="external text" rel="nofollow">images.main.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_zhwiki_latest/Xowa_zhwiki_2015-09-01_file_ns-000_part-2.7z" class="external text" rel="nofollow">images.main.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_zhwiki_latest/Xowa_zhwiki_2015-09-01_file_ns-100.7z" class="external text" rel="nofollow">images.other</a><br>
           </p>
         </td>
       </tr>
@@ -866,29 +904,27 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-08-17<br>
-            2014-08-11<br>
-            2014-08-27<br>
-            2014-08-17<br>
-            2014-08-17<br>
-            2014-08-26
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-14
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            1
+            1.3
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_zhwiki_latest/Xowa_zhbundle_2014-08-30.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_zhwiki_latest/Xowa_zhbundle_2015-09-01.7z" class="external text" rel="nofollow">wikis and images</a>
           </p>
         </td>
       </tr>
