--- a/image_dbs.html
+++ b/image_dbs.html
@@ -267,7 +267,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -300,7 +300,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1734,59 +1734,36 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://pt.wikipedia.org/wiki/">https://pt.wikipedia.org</a><br>
+            <a href="https://pt.wikipedia.org/wiki/">https://pt.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-11
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-20
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            1.8
+            13.7
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptwiki_2014-09-11_wiki.7z" class="external text" rel="nofollow">download</a><br>
-          </p>
-        </td>
-      </tr>
-      <tr style='color:black; border-collapse:collapse;'>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://pt.wikipedia.org/wiki/">https://pt.wikipedia.org</a><br>
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2014-09-11
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-        </td>
-        <td style='color:black; vertical-align:top; text-align:right;'>
-          <p>
-            10.4
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            .sqlite3
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptwiki_2014-09-11_images_001.7z" class="external text" rel="nofollow">download #1</a><br>
-            <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptwiki_2014-09-11_images_002.7z" class="external text" rel="nofollow">download #2</a><br>
+            <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptwiki_2015-09-01_text.7z" class="external text" rel="nofollow">wiki</a><br>
+             <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptwiki_2015-09-01_file_core.7z" class="external text" rel="nofollow">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptwiki_2015-09-01_file_ns-000_part-1.7z" class="external text" rel="nofollow">images.main.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptwiki_2015-09-01_file_ns-000_part-2.7z" class="external text" rel="nofollow">images.main.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptwiki_2015-09-01_file_ns-100.7z" class="external text" rel="nofollow">images.other</a><br>
           </p>
         </td>
       </tr>
@@ -1799,35 +1776,32 @@
             <a href="https://pt.wikiquote.org/wiki/">https://pt.wikiquote.org</a><br>
             <a href="https://pt.wikibooks.org/wiki/">https://pt.wikibooks.org</a><br>
             <a href="https://pt.wikiversity.org/wiki/">https://pt.wikiversity.org</a><br>
-            <a href="https://pt.wikinews.org/wiki/">https://pt.wikinews.org</a><br>
+            <a href="https://pt.wikinews.org/wiki/">https://pt.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-08-30<br>
-            2014-09-11<br>
-            2014-09-21<br>
-            2014-09-03<br>
-            2014-09-05<br>
-            2014-09-06<br>
-            2014-09-03<br>
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-20
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            1
+            1.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptbundle_2014-09-20.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_ptwiki_latest/Xowa_ptbundle_2015-09-01.7z" class="external text" rel="nofollow">wikis and images</a><br>
           </p>
         </td>
       </tr>
@@ -2175,28 +2149,27 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-06-07<br>
-            2014-06-03<br>
-            2014-06-01<br>
-            2014-06-03<br>
-            2014-06-06
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-17
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            4.1
+            4.7
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_idbundle_2014-06-13_including_wikipedia" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_idwiki_latest/Xowa_idbundle_2015-09-01.7z" class="external text" rel="nofollow">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2214,30 +2187,27 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-06-11<br>
-            2014-06-22<br>
-            2014-06-21<br>
-            2014-06-21<br>
-            2014-06-18<br>
-            2014-06-23<br>
-            2014-06-21
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-17
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5.8
+            8.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_robundle_latest_including_wikipedia" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_rowiki_latest/Xowa_robundle_2015-09-01.7z" class="external text" rel="nofollow">wikis and images</a>
           </p>
         </td>
       </tr>
