--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
 </td>
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
+  <b>2015-09-21</b> Portuguese, Romanian and Indonesian wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_ptwiki_latest" class="external text" rel="nofollow">Portuguese wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_rowiki_latest" class="external text" rel="nofollow">Romanian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_idwiki_latest" class="external text" rel="nofollow">Indonesian wikis</a>
+    </li>
+  </ul>
+
   <b>2015-09-14</b> English and Chinese wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
@@ -122,26 +132,6 @@
     <li> <a href="https://archive.org/details/Xowa_fawiki_latest" class="external text" rel="nofollow">Persian wikis</a>
     </li>
     <li> <a href="https://archive.org/details/Xowa_bnwiki_latest" class="external text" rel="nofollow">Bengali wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-08-16</b> English Wikipedia update released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-06-22</b> English Wikipedia update released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-05-04</b> English wikis and Korean wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_kowiki_latest" class="external text" rel="nofollow">Korean wikis</a>
     </li>
   </ul>
   
