--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,36 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_v2.9.4.1_.282015-09-27_20:45_Sun.29'>Release: v2.9.4.1 (2015-09-27 20:45 Sun)</span>
+    </h2>
+    <p>
+      v2.9.4 is a very light release. It has a few minor fixes. Most of my time this week as spent on Chinese / Serbian translation.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Minor_fixes'>Minor fixes</span>
+    </h3>
+    <p>
+      There is only one change worth more detail. I was using default values for Wikidata date precision which caused Script Error's to show on a few dozen Hungarian pages.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Image_packages_for_Hungarian_and_Thai_wikis'>Image packages for Hungarian and Thai wikis</span>
+    </h3>
+    <p>
+      These wikis are available at <a href="https://archive.org/details/Xowa_huwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_huwiki_latest</a> and <a href="https://archive.org/details/Xowa_thwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_thwiki_latest</a>
+    </p>
+    <h3>
+      <span class='mw-headline' id='Next_release:_v2.9.4'>Next release: v2.9.4</span>
+    </h3>
+    <p>
+      For images, I'm going to work on Serbian, Malay, Hebrew and Bulgarian
+    </p>
+    <p>
+      For development, I'm going to introduce the the Chinese / Serbian language translation.
+    </p>
+    <p>
+      <br>
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_v2.9.3.1_.282015-09-20_19:00_Sun.29'>Release: v2.9.3.1 (2015-09-20 19:00 Sun)</span>
     </h2>
     <p>
