--- a/image_dbs.html
+++ b/image_dbs.html
@@ -1661,20 +1661,18 @@
             <a href="https://hu.wikisource.org/wiki/">https://hu.wikisource.org</a><br>
             <a href="https://hu.wikiquote.org/wiki/">https://hu.wikiquote.org</a><br>
             <a href="https://hu.wikibooks.org/wiki/">https://hu.wikibooks.org</a><br>
-            <a href="https://hu.wikinews.org/wiki/">https://hu.wikinews.org</a><br>
+            <a href="https://hu.wikinews.org/wiki/">https://hu.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-07<br>
-            2014-09-03<br>
-            2014-09-03<br>
-            2014-09-02<br>
-            2014-09-04<br>
-            2014-09-03<br>
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-20
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
@@ -1683,12 +1681,12 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_huwiki_latest/Xowa_hubundle_2014-09-13.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_huwiki_latest/Xowa_hubundle_2015-09-01.7z" class="external text" rel="nofollow">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -1700,20 +1698,18 @@
             <a href="https://th.wikisource.org/wiki/">https://th.wikisource.org</a><br>
             <a href="https://th.wikiquote.org/wiki/">https://th.wikiquote.org</a><br>
             <a href="https://th.wikibooks.org/wiki/">https://th.wikibooks.org</a><br>
-            <a href="https://th.wikinews.org/wiki/">https://th.wikinews.org</a><br>
+            <a href="https://th.wikinews.org/wiki/">https://th.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-10-03<br>
-            2014-09-19<br>
-            2014-09-21<br>
-            2014-09-11<br>
-            2014-09-11<br>
-            2014-09-19<br>
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-20
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
@@ -1722,12 +1718,12 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_thwiki_latest/Xowa_thbundle_2014-10-04.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_thwiki_latest/Xowa_thbundle_2015-09-01.7z" class="external text" rel="nofollow">wikis and images</a>
           </p>
         </td>
       </tr>
