--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
 </td>
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
+  <b>2015-09-28</b> Hungarian and Thai wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_huwiki_latest" class="external text" rel="nofollow">Hungarian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_thwiki_latest" class="external text" rel="nofollow">Thai wikis</a>
+    </li>
+  </ul>
+
   <b>2015-09-21</b> Portuguese, Romanian and Indonesian wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_ptwiki_latest" class="external text" rel="nofollow">Portuguese wikis</a>
