--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
       <span class='mw-headline' id='Release:_v2.9.4.1_.282015-09-27_20:45_Sun.29'>Release: v2.9.4.1 (2015-09-27 20:45 Sun)</span>
     </h2>
     <p>
-      v2.9.4 is a very light release. It has a few minor fixes. Most of my time this week as spent on Chinese / Serbian translation.
+      v2.9.4 is a very light release. It has a few minor fixes. Most of my time this week was spent on Chinese / Serbian translation.
     </p>
     <h3>
       <span class='mw-headline' id='Minor_fixes'>Minor fixes</span>
