--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,18 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_NONE_.282015-10-04_22:00_Sun.29'>Release: NONE (2015-10-04 22:00 Sun)</span>
+    </h2>
+    <p>
+      I'm skipping the release this week. I ran into some issues with Chinese / Serbian translations, though I think I'm pretty close to being done. In addition, I have some other changes in queue that would add some signficant changes which I didn't want to introduce for a "first-week-of-the-month" release.
+    </p>
+    <p>
+      If you want a recent stable release, use <a href="https://github.com/gnosygnu/xowa/releases/tag/v2.9.4.1" class="external text" rel="nofollow">v2.9.4.1</a>. I'll keep that release up for a month.
+    </p>
+    <p>
+      Otherwise, next week's v2.10.2 will have more changes. I'll also resume generating wikis from the list below.
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_v2.9.4.1_.282015-09-27_20:45_Sun.29'>Release: v2.9.4.1 (2015-09-27 20:45 Sun)</span>
     </h2>
     <p>
