--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
       <span class='mw-headline' id='Release:_NONE_.282015-10-04_22:00_Sun.29'>Release: NONE (2015-10-04 22:00 Sun)</span>
     </h2>
     <p>
-      I'm skipping the release this week. I ran into some issues with Chinese / Serbian translations, though I think I'm pretty close to being done. In addition, I have some other changes in queue that would add some signficant changes which I didn't want to introduce for a "first-week-of-the-month" release.
+      I'm skipping the release this week. I ran into some issues with Chinese / Serbian translations, though I think I'm pretty close to being done. In addition, I have some other significant changes in queue which I didn't want to introduce for a "first-week-of-the-month" release.
     </p>
     <p>
       If you want a recent stable release, use <a href="https://github.com/gnosygnu/xowa/releases/tag/v2.9.4.1" class="external text" rel="nofollow">v2.9.4.1</a>. I'll keep that release up for a month.
